Add modpack update notifications with version tracking and UI badge
- Add installed version tracking via .installed_version file in each modpack's root folder
- Save version after successful game launch in LauncherCore
- Add isUpdateAvailable() to GameModPackMetadata comparing installed vs remote versions
  using VersionUtilities.compareVersionNumbers for proper semantic version comparison
- Add green "UPDATE" badge to modpack list cells when remote version is newer
- Badge appears next to version label and auto-hides when versions match

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>